--- a/Identity/config.json
+++ b/Identity/config.json
@@ -1,9 +1,9 @@
 {
     "connection_file": "/home/bcuser/IBP-MagnetoCorp/networkConnection.json",
-    "appAdmin": "vscode",
-    "appAdminSecret": "vscodepw",
+    "appAdmin": "digibank",
+    "appAdminSecret": "digibankpw",
     "orgMSPID": "org1msp",
     "caName": "https://192.168.22.81:",
-    "userName": "vscode",
+    "userName": "balaji",
     "gatewayDiscovery": { "enabled": true, "asLocalhost": false }
   }
